@@ -1,4 +1,4 @@
-$Id: History,v 1.8 2001-08-22 08:12:34 kurasige Exp $
+$Id: History,v 1.9 2002-02-09 04:28:24 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+-  Feb 9, 02 H.Kurashige(decay-V04-00-00)
+-   Modify Lowest/HighestBinEnergy for physics table
+     to calculate beta for slow particle 
+
 -  Aug 22, 01 H.Kurashige(decay-V03-02-01)
 - Clean up codes
 
